--- a/scss/utilidades/_map.scss
+++ b/scss/utilidades/_map.scss
@@ -1,6 +1,6 @@
 $colores: (
     fondo: rgb(118, 118, 230),
-    fondo2: rgb(61, 61, 143),
+    fondo2: rgba(122, 54, 199, 0.596),
     letras: rgb(200, 104, 230),
     secundario: rgb(89, 4, 122),
     terciario: rgb(26, 2, 71),
